# openvr_api-libre

./: CMakeLists.txt  Readme.md  hellovr_opengl_main.cpp  openvr.h  openvr_api_osvr.kdev4  openvr_api_public.cpp  openvr_openhmd.h  openvr_osvr.h
shared/: strtools.cpp
